Fix sendAtomic wrongly wraps requestArgs into List (#140)